SERVER-49508 Step up deadlock between migration recovery and prepared transaction